--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 ../.idea/
+.idea/
 pg_hba.conf
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
