--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,9 @@ psycopg2-binary = "==2.8.6"
 gunicorn = "==20.0.4"
 dj-database-url = "==0.5.0"
 whitenoise = "==5.2.0"
+mock = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
