--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,9 @@ psycopg2-binary = "==2.8.6"
 gunicorn = "==20.0.4"
 dj-database-url = "==0.5.0"
 whitenoise = "==5.2.0"
-mock = "*"
-
+mock = "==4.0.3"
+djangorestframework = "==3.12.4"
+requests = "==2.25.1"
 [dev-packages]
 
 [requires]
